--- a/pages/productos.html
+++ b/pages/productos.html
@@ -83,6 +83,7 @@
     <footer class="bg-dark text-white text-center py-3">
         <p class="mb-0">© 2026 Patitas Felices - Petshop - Valentina Perez - Entrega Final Coder House</p>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="../js/main.js"></script>
 </body>
 
